# rusty-base

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/rb-cli/: Cargo.toml
crates/rb-cli/src/: main.rs
crates/rb-cli/tests/: cli.rs
crates/rb-filter-engine/: Cargo.toml
crates/rb-filter-engine/examples/: bench_filter.rs
crates/rb-filter-engine/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  schema.rs
crates/rb-filter-engine/src/compiler/: sqlite.rs
crates/rb-filter-engine/tests/: compatibility_fixtures.rs  filter_engine.rs  parser_resilience.rs  relation_plan.rs  relation_sql.rs  schema_resolver.rs
crates/rb-server/: Cargo.toml
crates/rb-server/examples/: bench_server.rs
crates/rb-server/src/: lib.rs  main.rs
crates/rb-server/src/server/: admin.rs  app.rs  auth.rs  collections.rs  files.rs  http.rs  mail.rs  mod.rs  realtime.rs  records.rs  settings.rs  storage.rs  validation.rs
crates/rb-server/src/server/admin/: app.js  collections_ui.js  data_helpers.js  index.html  records_ui.js  render_helpers.js  settings_ui.js  state.js  styles.css
crates/rb-server/src/server/admin/collections/: auth.js  field_options.js  fields.js  import_export.js  indexes.js  meta.js  rules.js
crates/rb-server/src/server/admin/records/: browser.js  editor.js  files.js  relations.js  validation.js
crates/rb-server/src/server/app/: access.rs  batch.rs  context.rs  realtime_events.rs  routes.rs
crates/rb-server/src/server/auth/: action_tokens.rs  impersonation.rs  oauth.rs  otp.rs  password.rs  superusers.rs  tokens.rs
crates/rb-server/src/server/auth/oauth/: accounts.rs  profile.rs  provider.rs
crates/rb-server/src/server/collections/: crud.rs  import_export.rs  indexes.rs  schema.rs
crates/rb-server/src/server/files/: multipart.rs  thumbnails.rs
crates/rb-server/src/server/records/: cascade.rs  expand.rs  mutation.rs  projection.rs  query.rs  response.rs  rules.rs  view.rs
crates/rb-server/src/server/validation/: collection.rs  datetime.rs  pattern.rs  view.rs
crates/rb-server/tests/: pocketbase_server_fixtures.rs  server_slice.rs
docs/: ARCHITECTURE.md  FILTER_COMPATIBILITY.md  INDEX_PLAN.md  POCKETBASE_COMPATIBILITY_PLAN.md  RELATION_QUERY_PLAN.md  ROADMAP.md
examples/: blog.sh
fixtures/fuzz/: filter_engine_seed_corpus.txt
fixtures/pocketbase/: filter_denied.json  filter_request_context.json  filter_safe_subset.json
fixtures/pocketbase/server/: admin_bootstrap.json  auth_actions.json  auth_context.json  batch.json  import_export.json  protected_files.json  realtime.json  relation_expand.json  settings.json  view_collections.json
scripts/: admin_browser_smoke.mjs  admin_smoke.mjs  check_admin_js.mjs  pocketbase_compare.mjs
