[package]
name = "rb-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Minimal PocketBase-style HTTP and SQLite slice for Rusty Base"

[dependencies]
argon2 = "0.5"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
rb-filter-engine = { path = "../rb-filter-engine" }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ring = "0.17"
rusqlite = { version = "0.32", features = ["hooks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
